--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,8 @@
-apply plugin: 'java'
+apply plugin: 'application'
+
+application {
+    mainClass = 'ch.hslu.oop.temperature.TemperatureUI'
+}
 
 repositories {
     mavenCentral()
@@ -15,4 +19,8 @@ dependencies {
     testImplementation("org.junit.jupiter:junit-jupiter:5.9.2")
     testRuntimeOnly("org.junit.platform:junit-platform-launcher")
     testImplementation 'nl.jqno.equalsverifier:equalsverifier:3.15.3'
+}
+
+run {
+    standardInput = System.in
 }
